// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`observe & intercept 1`] = `
[
  {
    "intercept": {
      "name": "b",
      "newValue": {
        "title": "get tea",
      },
      "object": "skip",
      "type": "add",
    },
  },
  {
    "intercept": {
      "name": "a",
      "object": "skip",
      "type": "remove",
    },
  },
]
`;

exports[`observe & intercept 2`] = `
[
  {
    "observe": {
      "debugObjectName": "TestObject",
      "name": "b",
      "newValue": {
        "title": "get tea",
      },
      "object": "skip",
      "observableKind": "object",
      "type": "add",
    },
  },
  {
    "observe": {
      "debugObjectName": "TestObject",
      "name": "a",
      "object": "skip",
      "observableKind": "object",
      "oldValue": {
        "title": "get coffee",
      },
      "type": "remove",
    },
  },
]
`;
